fix: resolve compile errors, suppress/fix deprecation warnings, add SonarCloud CI
- Fix non-static CLIENT_ID/CLIENT_SECRET/APPSECRET referenced from static methods in Twitter, Google, Facebook auth
- Fix deprecated API usage: URI.create() instead of new URL(String), plain Java instead of StringUtils.removeStart()
- Suppress unavoidable deprecations: @Temporal on Date field, GoogleCredential in Google auth
- Add SonarCloud analysis to CI with JaCoCo coverage reporting
- Add fetch-depth: 0 to checkout for SonarCloud blame info

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>